# moving-base

./: CMakeLists.txt  package.xml
launch/: manual.launch
msg/: arduino_status.msg  motordesc.msg
scripts/demos/: crab_steer.py  rottrans.py
src/: queue_reducer.py  testing_motor.py  xbox.py
src/arduino/: Motor.h  NEW_MOTOR_PYSERIAL_testing.ino  arduino.ino  motor_testing.ino  simple_pyserial.ino  simple_rosserial.ino  slave_drive.ino  slave_steer.ino  testing_absolute_encoders.ino  uno_motor_testing.ino.ino
src/arduino/testing/: keywords.txt
src/arduino/testing/Encoder/: Encoder.cpp  Encoder.h
src/arduino/testing/InterruptHelper/: InterruptHelper.cpp  InterruptHelper.h
src/arduino/testing/Motor/: Motor.cpp  Motor.h  keywords.txt
src/arduino/testing/PortManipulation/: PortManipulation.cpp  PortManipulation.h
src/manual/: visualize.py
src/manual/motion/: complex_crab.py  independent_crab.py
src/manual/shared/: joy_callback.py
src/scripts/: publisher_test.py
src/shared/: easy_pyserial.py  pid.py  serial_node.py  setup.py  simple_pyserial.py  simple_rosserial.py
